--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ohlc-charts",
+  "name": "ohlc-chart",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://angvishvish.github.io/ohlc-chart",
+  "homepage": "http://angvishvish.github.io/",
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.4",
     "@testing-library/jest-dom": "^4.2.4",
