--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ohlc-chart",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://angvishvish.github.io/ohlc-chart",
+  "homepage": "http://angvishvish.github.io/ohlc-chart/",
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.4",
     "@testing-library/jest-dom": "^4.2.4",
