--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ohlc-chart",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://angvishvish.github.io/ohlc-chart/",
+  "homepage": "/",
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.4",
     "@testing-library/jest-dom": "^4.2.4",
@@ -10,7 +10,6 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.20.0",
     "history": "^5.0.0",
-    "moment": "^2.29.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
